--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,8 @@
 RewriteEngine on
-RewriteRule ^products(?:/([^/]+))?/?$ products.php?id=$1 [QSA,L]
+RewriteBase /
+AddType text/cache-manifest .manifest
+AddType text/javascript-manifest .manifest
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?/$1 [QSA,L]
