--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,6 @@
 RewriteEngine on
-RewriteRule ^products(?:/([^/]+))?/?$ products.php?id=$1 [QSA,L]
+RewriteBase /mobile/
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?/$1 [L]
+
